sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: not found: value i
    i=0
    ^AlgCombSort:15: error: not found: value i
    while(i+ecart<nbVal){
          ^AlgCombSort:16: error: not found: value i
      if(plusPetit(i,i+ecart)){
                   ^AlgCombSort:16: error: not found: value i
      if(plusPetit(i,i+ecart)){
                     ^AlgCombSort:17: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:17: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:20: error: not found: value i
      i+=1
      ^